# nanoclaw-amplifier

./: .gitignore  Dockerfile  README.md  install.sh  package.json  pyproject.toml  upgrade.sh
.github/workflows/: docker.yml
cli/: package.json
container/skills/add-provider/: SKILL.md
container/skills/list-providers/: SKILL.md
modules/tool-nanoclaw-messaging/: pyproject.toml
modules/tool-nanoclaw-messaging/amplifier_module_tool_nanoclaw_messaging/: __init__.py  tools.py
modules/tool-nanoclaw-scheduling/: pyproject.toml
modules/tool-nanoclaw-scheduling/amplifier_module_tool_nanoclaw_scheduling/: __init__.py  tools.py
nanoclaw_amplifier/: __init__.py  bundle.md  config.py  db.py  runner.py
tests/: e2e_test.py
