[project]
name = "amplifier-module-tool-nanoclaw-messaging"
version = "1.0.0"
description = "Nanoclaw messaging tools for Amplifier"
requires-python = ">=3.12"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
tool-nanoclaw-messaging = "amplifier_module_tool_nanoclaw_messaging"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
